package laboratorio2;

public class Assento {
  private String nome;


}
