package laboratorio2;

public class Mapa {

  private final Assento[][] assentos;

  public Mapa(int i) {
    assentos = new Assento[i][i];
  }
}
